--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,2 +1,33 @@
-<h1>Books#index</h1>
-<p>Find me in app/views/books/index.html.erb</p>
+<div id='search-form'>
+	<%= form_tag(books_index_path, method: :get) do %>
+		<%= label_tag 'Search' %>
+		<%= text_field_tag :search_term, nil, placeholder: 'Book Title...' %>
+		<%= submit_tag 'Go' %>
+	<% end %>
+</div>
+
+<% if @books.empty? %>
+
+No books found matching '<%= @search_term %>'
+
+<% else %>
+
+	<table border="1">
+	  <tr>
+	    <th>Image</th>
+	    <th>Title</th>
+	    <th>Author</th>
+	    <th>Description</th>
+	  </tr>
+	  <% @books.each do |book| %>
+	    <tr class=<%= cycle('even', 'odd') %>>
+	      <td><%= link_to image_tag(book["volumeInfo"]["imageLinks"]["smallThumbnail"], class: "linked-image"),
+	                book["volumeInfo"]["previewLink"] if book["volumeInfo"]["imageLinks"]%></td>
+	      <td><%= link_to(book["volumeInfo"]["title"], book["volumeInfo"]["previewLink"]) %></td>
+	      <td><%= book["volumeInfo"]["authors"].join(',') if book["volumeInfo"]["authors"] %></td>
+	      <td><%= sanitize(book["volumeInfo"]["description"]) %></td>
+	    </tr>
+	  <% end %>
+	</table>
+
+<% end %>
