--- a/app/assets/stylesheets/books.scss
+++ b/app/assets/stylesheets/books.scss
@@ -11,25 +11,40 @@ td {
 }
 
 .linked-image {
-    border: 2px pink dashed;
     border-radius: 7px;
     padding: 3px;
 }
 
-#submit-button {
-    height: 25px;
-    width: 100px;
-    background: black;
-    color: white;
-    font-size: 10pt;
-}
-
-input#looking_for {
-    height: 65px;
-    width: 150px;
-    font-size: 14pt;
-}
-
 #search-form {
+    display: flex;
+    justify-content: center;
     padding-bottom: 20px;
+    padding-top: 140px;
+}
+
+#banner{
+    width: 100%;
+    height: 40vh;
+    background: url(cover.jpg);
+    border-radius: 5px;
+}
+.search-icon{
+    width: 45px;
+    height: 45px;
+}
+input.search-icon{
+    margin: -17px;
+    margin-left: -30px;
+}
+.search-label{
+    font-size: 25px;
+    color: white;
+}
+input#search_term{
+    border-radius: 10px;
+    height: 40px;
+}
+header img{
+    width: 40px;
+    height: 40px;
 }
