--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -18,7 +18,7 @@
       <td><%= x += 1 %></td>
       <td><%= link_to image_tag(book["volumeInfo"]["imageLinks"]["smallThumbnail"], class: "linked-image"),
                 book["volumeInfo"]["previewLink"] if book["volumeInfo"]["imageLinks"]%></td>
-      <td><%= link_to(book["volumeInfo"]["title"], book["volumeInfo"]["previewLink"]) %></td>
+      <td><%= link_to(book["volumeInfo"]["title"], book["volumeInfo"]["previewLink"], target: :_blank) %></td>
       <td><%= book["volumeInfo"]["authors"].join(',') if book["volumeInfo"]["authors"] %></td>
       <td><%= sanitize(book["volumeInfo"]["description"]) %></td>
     </tr>
