--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <header>
 	<div>
 		<br>
-		<h2 align="center"><b>Google Books</b></h2>
+		<h2 align="center"><b>BookSearchy</b></h2>
 		<h5 align="center">Created by <%= link_to "Ayush Verma", "https://ayushexploring.github.io", target: :_blank %></h5>
 		<br>
 	</div>
